--- a/source/sass/c_local/10_layout/_layout.sass
+++ b/source/sass/c_local/10_layout/_layout.sass
@@ -397,8 +397,11 @@ body
               margin-bottom: 0
               margin-top: 0
               z-index: 999
+            li 
+              white-space: normal
             li > a
               color: $black
+              white-space: nowrap
             li > a:hover
               background: url("../../asset/img/svg/icons/menu_dot_black.svg") no-repeat
               background-position-x: right
